--- a/src/SASS/App.scss
+++ b/src/SASS/App.scss
@@ -3,3 +3,11 @@
     padding: 0;
     margin: 0;
 }
+
+.App {
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-rows: 1fr 10fr;
+    gap: 10px;
+}
