--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box;padding:0;margin:0}.App{height:100vh;width:100vw;display:grid;grid-template-rows:1fr 10fr;gap:10px}/*# sourceMappingURL=App.css.map */
+*{box-sizing:border-box;padding:0;margin:0}.App{height:100vh;width:100vw;display:grid;display:flex;flex-direction:column}/*# sourceMappingURL=App.css.map */
